bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: ';' expected but 'if' found.
  return true if n>90 && n<110
              ^